not force enumRef on interface